# StockVision

./: .editorconfig  .env.example  .env.production  .flake8  .gitattributes  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .readthedocs.yaml  0001-frontend-Move-Sign-In-to-mobile-side-nav-hide-in-hea.patch  CLAUDE.md  README.md  _chunk.py  close_issues.bat  cspell.json  debug_response.py  debug_response2.py  docker-compose.yml  frontend_local_backup.patch  import_topix100.py  mkdocs.yml  package-lock.json  package.json  patch.txt  pyproject.toml  pytest.ini  railway.toml  requirements.txt  test_app.py  test_enhanced_engine.py  test_enhanced_phase3.py  test_ensemble.py  test_integrated.py  test_integrated_backtest.py  test_lstm.py  test_lstm_backtest.py  test_performance.py  test_performance_simple.py  test_phase3_simple.py  vercel.json  (+1 more)
.claude/: settings.local.json
.storybook/: main.js  manager.js  preview.js
colab_templates/: fresh_stock_data_2024.ipynb  stock_data_fetcher.ipynb  topix100_stock_data_2024.ipynb
docs/: api_spec.md  architecture.md  cache_key_improvements.md  csv_data_import_guide.md  csv_data_usage.md  development_guide.md  environment-variables.md  frontend_architecture.md  generate-docs.ts  generate_api_docs.py  index.md  middleware-architecture.md  review-process.md  stock-expansion-plan.md  storybook.md  testing_guide.md
frontend/: .env.example  eslint.config.js  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test.html  tsconfig.eslint.json  vite.config.ts
mobile/: App.tsx  README.md  (+2 more)
(+473 files in other folders)
